--- a/js/pages/user/user-info.html
+++ b/js/pages/user/user-info.html
@@ -83,6 +83,76 @@ div ul li {
     padding: 9px 15px;
     ;
 }
+
+.header {
+    height: 68px;
+    padding: 12px 30px;
+}
+
+.icon {
+    height: 15px;
+    width: 15px;
+}
+
+.gradeRank {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 60px;
+    padding: 0 30px;
+    border-top: 1px solid #eee;
+}
+
+.grade {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    height: 100%;
+    width: 50%;
+    border-right: 1px solid #eee;
+}
+
+.ranking {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.assets {
+    height: 144px;
+    padding: 30px 30px 36px;
+    margin-top: 12px;
+}
+
+.assets:active {
+    height: 144px;
+    padding: 30px 30px 36px;
+    margin-top: 12px;
+    background-color: #f2f2f2;
+}
+
+.assets-number {
+    display: flex;
+    justify-content: space-between;
+}
+
+.credit {
+    height: 250px;
+    padding: 25px 30px 30px;
+}
+
+.content {
+    height: 60px;
+    width: 100vw;
+    padding: 0 30px;
+}
+
+.content a {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 60px;
+}
 </style>
 <div id="app" class="mui-views">
     <div class="mui-view">
@@ -90,7 +160,7 @@ div ul li {
         </div>
     </div>
 </div>
-<div id="infoPage" class="mui-page" ms-controller="info">
+<!-- <div id="infoPage" class="mui-page" ms-controller="info">
     <div class="mui-page-content bs-text-small">
         <ul class="mui-table-view">
             <li class="mui-table-view-cell">
@@ -101,32 +171,6 @@ div ul li {
                     <div style="margin-right: 25px;">{{nickname}}</div>
                 </a>
             </li>
-            <!-- <li class="mui-table-view-cell">
-                <a href="#" class="mui-navigate-right">
-                    <span class="bs-text-gray nav-title">会员中心</span>
-                </a>
-            </li> -->
-            <!-- <ul class="mui-table-view" style="margin-top: 5px">
-                <li class="mui-table-view-cell">
-                    <a href="invoice-list.html" class="mui-navigate-right">
-                        <span class="bs-text-gray nav-title">发票管理</span>
-                    </a>
-                </li>
-            </ul> -->
-            <!-- <ul class="mui-table-view" style="margin-top: 5px">
-                <li class="mui-table-view-cell">
-                    <a href="frequent-contact-list.html" class="mui-navigate-right">
-                        <span class="bs-text-gray nav-title">入住人信息</span>
-                    </a>
-                </li>
-            </ul>
-            <ul class="mui-table-view" style="margin-top: 5px">
-                <li class="mui-table-view-cell">
-                    <a href="commonweal-introduce.html" class="mui-navigate-right">
-                        <span class="bs-text-gray nav-title">本宿公益</span>
-                    </a>
-                </li>
-            </ul> -->
             <ul class="mui-table-view" style="margin-top: 5px;padding-left: 15px;border-bottom: 2px solid #eee;">
                 <li class="mui-table-view-cell">
                     <a href="coupon.html" class="mui-navigate-right">
@@ -148,28 +192,8 @@ div ul li {
                     </a>
                 </li>
             </ul>
-            <!-- <ul class="mui-table-view" style="margin-top: 5px">
-                <li class="mui-table-view-cell">
-                    <a href="vip-invite.html" class="mui-navigate-right">
-                        <span class="bs-text-gray nav-title">设置</span>
-                    </a>
-                </li>
-            </ul>
-            <ul class="mui-table-view" style="margin-top: 5px">
-                <li class="mui-table-view-cell">
-                    <a href="about.html" class="mui-navigate-right">
-                        <span class="bs-text-gray nav-title">关于我们</span>
-                    </a>
-                </li>
-            </ul> -->
-            <!--<li class="mui-table-view-cell">
-                <a href="#">
-                    <span class="bs-text-gray nav-title">手机号</span>
-                    <span>{{mobile}}</span>
-                </a>
-            </li>-->
-        </ul>
-        <!--<ul class="mui-table-view">
+        </ul> -->
+<!--<ul class="mui-table-view">
             <li class="mui-table-view-cell">
                 <a href="balance.html" class="mui-navigate-right">
                     <span class="bs-text-gray nav-title">余额</span>
@@ -177,7 +201,7 @@ div ul li {
                 </a>
             </li>
         </ul>-->
-        <!-- <ul class="mui-table-view" style="margin-top: 50px;margin-bottom: 60px;" ms-if="isLogin==1" ms-click="logOff">
+<!-- <ul class="mui-table-view" style="margin-top: 50px;margin-bottom: 60px;" ms-if="isLogin==1" ms-click="logOff">
             <li class="mui-table-view-cell">
                 <a class="mui-navigate-right">
                     <span class="bs-text-gray nav-title">退出当前账号</span>
@@ -186,30 +210,83 @@ div ul li {
             <div style="height: 5px;">
             </div>
         </ul> -->
-        <!--<div style="position: fixed; bottom: 0; width: 100%;">
+<!--<div style="position: fixed; bottom: 0; width: 100%;">
             <div class="mui-content-padded mui-text-center" style="margin-top: 25px">
                 客服电话： <a ms-attr-href="'tel:'+SERVICECALL">{{SERVICECALL}}</a>
             </div>
         </div>-->
+<!--     </div>
+</div> -->
+<div id="infoPage" ms-controller="info" class="bs-text-normal">
+    <div class="header bs-bg-white">
+        <a href="#nick" style="display: flex;justify-content: space-between;align-items: center;">
+            <div style="display: flex;justify-content: flex-start;align-items: center;">
+                <div style="width: 44px;height: 44px;margin: 0 16px 0 0;" class="photo circle" ms-css-background-image="'url('+urlAPINet + headImg+')'">
+                    &nbsp;
+                </div>
+                <div style="margin-right: 25px;">{{nickname}}</div>
+            </div>
+            <div style="height: 15px;">
+                <img src="../img/icon/right-arrow.svg" class="icon" alt="">
+            </div>
+        </a>
     </div>
-    <!-- <nav class="mui-bar mui-bar-tab" style="background: white !important;height: 56px;padding: 8px 0 5px;">
-        <a class="mui-tab-item" ms-on-tap="goIndex">
-            <span class="mui-icon"><img src="/img/icon/icon-home.svg" class="nav-ico"></span>
-            <span class="mui-tab-label">首页</span>
+    <div class="gradeRank bs-bg-white">
+        <div class="grade">
+            <div style="margin-right: 16px;">会员等级</div>
+            <img src="../img/card/card_No1.svg" style="height: 20px;width: 24px;">
+        </div>
+        <div class="ranking">
+            <div>全区排名</div>
+            <div style="margin-left: 16px;">869</div>
+        </div>
+    </div>
+    <div class="assets bs-bg-white">
+        <div style="margin-bottom: 40px;">
+            总资产（时/s）
+        </div>
+        <div class="assets-number bs-text-x-larger">
+            <div style="color: #fcc20f">
+                30000.00 s
+            </div>
+            <div class="bs-text-444">
+                1000.00 s
+            </div>
+        </div>
+    </div>
+    <!-- <div class="credit bs-bg-white">
+        <canvas ms-attr="{id: 'circleGolden' + el.id}" style="z-index: 2;order: 0;"></canvas>
+    </div> -->
+    <div class="content bs-bg-white" style="margin: 12px 0;">
+        <a href="../coupon.html">
+            <div>
+                优惠券
+            </div>
+            <div style="height: 15px;">
+                <img src="../img/icon/right-arrow.svg" class="icon" alt="">
+            </div>
         </a>
-        <a class="mui-tab-item" ms-on-tap="goRoom">
-            <span class="mui-icon"><img src="/img/icon/icon-ruzhu.svg" class="nav-ico"></span>
-            <span class="mui-tab-label">入住</span>
+    </div>
+    <div class="content bs-bg-white" style="margin: 12px 0;">
+        <a href="../promotion-detail.html">
+            <div>
+                推广奖励
+            </div>
+            <div style="height: 15px;">
+                <img src="../img/icon/right-arrow.svg" class="icon" alt="">
+            </div>
         </a>
-        <a class="mui-tab-item" ms-on-tap="goOrder">
-            <span class="mui-icon"><img src="/img/icon/icon-dingdan.svg" class="nav-ico"></span>
-            <span class="mui-tab-label">订单</span>
+    </div>
+    <div class="content bs-bg-white" style="margin: 12px 0;">
+        <a href="../vip-invite.html">
+            <div>
+                邀请好友
+            </div>
+            <div style="height: 15px;">
+                <img src="../img/icon/right-arrow.svg" class="icon" alt="">
+            </div>
         </a>
-        <a class="mui-tab-item">
-            <span class="mui-icon"><img src="/img/icon/icon-more-select.svg" class="nav-ico"></span>
-            <span class="mui-tab-label">我的</span>
-        </a>
-    </nav> -->
+    </div>
 </div>
 <div ms-controller="change">
     <div id="nick" class="mui-page" style="position: fixed;z-index: 999;">
@@ -219,7 +296,7 @@ div ul li {
                     <div class="cancelBtn mui-pull-left" style="padding: 5px 15px;">取消</div>
                     <div style="padding: 5px 15px;" class="mui-pull-right" ms-class-1="mui-text-danger:isNicknameChange" ms-class-2="mui-text-gray:!isNicknameChange" ms-click="save">保存</div>
                 </div>
-                <div class="circle" style="margin: 20px auto;width: 96px;height: 96px;background-size: cover;background-position: center;position:relative;top: 3px;"  ms-css-background-image="'url('+urlAPINet + headImg+')'" ms-on-tap="changeImg">
+                <div class="circle" style="margin: 20px auto;width: 96px;height: 96px;background-size: cover;background-position: center;position:relative;top: 3px;" ms-css-background-image="'url('+urlAPINet + headImg+')'" ms-on-tap="changeImg">
                     <img src="../img/edit-small.png" style="position: absolute;background: #fff;border-radius: 50%;bottom: 2px;left: 72px;width: 18px;" />
                 </div>
                 <div class="mui-input-row" style="color: #bdbdbd;">
