--- a/js/pages/checkin/inroom.html
+++ b/js/pages/checkin/inroom.html
@@ -162,7 +162,7 @@ div .mui-popup-buttons .mui-popup-button {
         <div class="bs-text-18" style="margin-bottom: 25px;">
             设备控制
         </div>
-        <div class="device-content">
+        <div class="device-content" onclick="javascript:location.href='../inroom/telecontroller.html';">
             <div>影视</div>
             <div>
                 <img src="../img/icon/movie.svg" alt="">
@@ -174,7 +174,7 @@ div .mui-popup-buttons .mui-popup-button {
                 <img src="../img/icon/sunshine.svg" alt="">
             </div>
         </div>
-        <div class="device-content">
+        <div class="device-content" onclick="javascript:location.href='../inroom/temperature.html';">
             <div>温度</div>
             <div>
                 <img src="../img/icon/temperature.svg" alt="" style="position: relative;right: 8px;">
@@ -183,7 +183,7 @@ div .mui-popup-buttons .mui-popup-button {
     </div>
     <div style="display: flex;background-color: white;height: 170px;padding: 8vw 4vw;margin: 8px 0 16px;">
         <div style="width: 46vw;border-right: 1px solid #eee;">
-            <div class="cirque bs-text-normal bs-text-white bs-bg-169488" ms-on-tap="goOpendoor">
+            <div class="cirque bs-text-normal bs-text-white bs-bg-444" ms-on-tap="goOpendoor">
                 点击开门
             </div>
             <div class="bs-text-x-smaller prompt bs-text-444" style="margin-top: 20px;text-align: center;">
@@ -193,7 +193,7 @@ div .mui-popup-buttons .mui-popup-button {
         <div style="width: 46vw;margin-top: 10px;">
             <div style="margin: 0px auto;text-align: center;" ms-on-tap="goCheckout">
                 <img src="../img/icon/checkOut.svg" class="">
-                <div class="bs-text-smaller bs-text-169488" style="font-family: 'Microsoft Yahei';">点击退房</div>
+                <div class="bs-text-smaller bs-text-444" style="font-family: 'Microsoft Yahei';">点击退房</div>
             </div>
             <div class="bs-text-x-smaller prompt bs-text-444" style="margin-top: 20px;text-align: center;">
                 此时退房将获得200时币
