--- a/js/pages/index/searchLocation.html
+++ b/js/pages/index/searchLocation.html
@@ -7,12 +7,12 @@
 
 .hot-hotel-recommend {
     border: 1px solid #eee;
-    border-radius: 12px;
-    height: 24px;
+    border-radius: 17.5px;
+    height: 35px;
     text-align: center;
     display: inline-block;
-    margin-left: 24px;
-    margin-bottom: 16px;
+    margin: 0 0 16px 24px;
+    padding: 5px 13px;
 }
 
 
@@ -91,41 +91,25 @@ hr {
                 搜索
             </div>
         </div>
-<<<<<<< HEAD
         <section style="display: flex;justify-content: baseline;align-items: center;padding: 20px 24px;">
             <div><img src="" style="width: 16px;height: 16px;"></div>
             <div style="font-size: 14px;">&nbsp;&nbsp;定位当前位置</div>
         </section>
         <section style="text-align: left;">
-            <div class="bs-text-small bs-text-153" style="font-size: 12px;margin-bottom: 24px;padding-left: 24px;">热门酒店推荐</div>
+            <div class="bs-text-small bs-text-gray" style="font-size: 12px;margin-bottom: 24px;padding-left: 24px;">热门酒店推荐</div>
             <div>
-                <div class="bs-text-small bs-text-black hot-hotel-recommend">&nbsp;&nbsp;&nbsp;&nbsp;上海迪斯尼店&nbsp;&nbsp;&nbsp;&nbsp;</div>
-                <div class="bs-text-small bs-text-black hot-hotel-recommend">&nbsp;&nbsp;&nbsp;&nbsp;惠南店&nbsp;&nbsp;&nbsp;&nbsp;</div>
-                <div class="bs-text-small bs-text-black hot-hotel-recommend">&nbsp;&nbsp;&nbsp;&nbsp;野生动物园店&nbsp;&nbsp;&nbsp;&nbsp;</div>
-                <div class="bs-text-small bs-text-black hot-hotel-recommend">&nbsp;&nbsp;&nbsp;&nbsp;陆家嘴店&nbsp;&nbsp;&nbsp;&nbsp;</div>
-                <div class="bs-text-small bs-text-black hot-hotel-recommend">&nbsp;&nbsp;&nbsp;&nbsp;浦东机场店&nbsp;&nbsp;&nbsp;&nbsp;</div>
-                <div class="bs-text-small bs-text-black hot-hotel-recommend">&nbsp;&nbsp;&nbsp;&nbsp;虹桥机场店&nbsp;&nbsp;&nbsp;&nbsp;</div>
-                <div class="bs-text-small bs-text-black hot-hotel-recommend">&nbsp;&nbsp;&nbsp;&nbsp;虹桥火车站店&nbsp;&nbsp;&nbsp;&nbsp;</div>
-                <div class="bs-text-small bs-text-black hot-hotel-recommend">&nbsp;&nbsp;&nbsp;&nbsp;上海火车站店&nbsp;&nbsp;&nbsp;&nbsp;</div>
-=======
-        <hr>
-        <section class="search-panel" style="padding: 20px 0 0; text-align: left;">
-            <span class="bs-text-small bs-text-gray">酒店推荐</span>
-            <div class="bs-text-small bs-text-black" style="margin: 10px 0;">
-                上海迪斯尼店
-            </div>
-            <div class="bs-text-small bs-text-black" style="margin: 10px 0;">惠南店</div>
-            <div class="bs-text-small bs-text-black" style="margin: 10px 0;">
-                上海迪斯尼店
-            </div>
-            <div class="bs-text-small bs-text-black" style="margin: 10px 0;">惠南店</div>
-            <div class="bs-text-small bs-text-black" style="margin: 10px 0;">
-                上海迪斯尼店
->>>>>>> 2.0-demo
+                <div class="bs-text-small bs-text-black hot-hotel-recommend">上海迪斯尼店</div>
+                <div class="bs-text-small bs-text-black hot-hotel-recommend">惠南店</div>
+                <div class="bs-text-small bs-text-black hot-hotel-recommend">野生动物园店</div>
+                <div class="bs-text-small bs-text-black hot-hotel-recommend">陆家嘴店</div>
+                <div class="bs-text-small bs-text-black hot-hotel-recommend">浦东机场店</div>
+                <div class="bs-text-small bs-text-black hot-hotel-recommend">虹桥机场店</div>
+                <div class="bs-text-small bs-text-black hot-hotel-recommend">虹桥火车站店</div>
+                <div class="bs-text-small bs-text-black hot-hotel-recommend">上海火车站店</div>
             </div>
         </section>
         <section style="padding: 0px 24px;text-align: left;margin-top: 8px;">
-            <div class="bs-text-small bs-text-153" style="font-size: 12px;margin-bottom: 24px;">历史搜索记录</div>
+            <div class="bs-text-small bs-text-gray" style="font-size: 12px;margin-bottom: 24px;">历史搜索记录</div>
             <div>
                 <div class="bs-text-small bs-text-balck" style="display: flex;justify-content: space-between;align-content: center;margin-bottom: 16px;">
                     <div style="font-size: 14px;">上海迪斯尼店</div>
